test/errors/identifiers_error/zs/reserved_keywords/cpp_keyword_struct_name_error.zs
package reserved_keywords.cpp_keyword_struct_name_error;

struct auto // reserved keyword in generated C++
{
    uint16  param;
    uint32  value;
};
